<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MaleWorld</string>
    <string name="do_you_have_an_account">Do you have an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="your_email">Your Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="first_slide">Choose your products</string>
    <string name="second_slide">Fast Delivery</string>
    <string name="third_slide" tools:ignore="DuplicateDefinition">Good Service</string>
    <string name="description">Hello Gentlemen,You can buy any male products here.We are trying to give best male products.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>